Improved formatting: no largely-overfull boxes.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12659 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -1,9 +1,9 @@
 \section{Coulomb-Nuclear Interference}
 \label{sec:coulomb}
 
-The Coulomb-nuclear interference (CNI) can be used to probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. 
+The Coulomb-nuclear interference (CNI) can be used to\Break probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. 
 
-For the modulus, a relevant question is whether the earlier reported non-exponentiality of the differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives a sizeable contribution. Concerning the phase, several parametrisations with different physics interpretations will be tested; for each of them the $\rho$ parameter (representative for the phase value at $t = 0$ according to Eq.~(\ref{eq:rho def})) will be determined.
+For the modulus, a relevant question is whether the earlier reported non-exponentiality of the differential\Break cross-section \cite{8tev-90m} can be attributed solely to the nuclear\Break component or whether Coulomb scattering gives a sizeable contribution. Concerning the phase, several parametrisations\Break with different physics interpretations will be tested; for each of them the $\rho$ parameter (representative for the phase value at $t = 0$ according to Eq.~(\ref{eq:rho def})) will be determined.
 
 Section~\ref{sec:cni framework} outlines the theoretical concepts needed to describe the CNI effects. Section~\ref{sec:cni anal proc} provides details on fitting procedures used to analyse the data. Sections \ref{sec:fit exp1} and \ref{sec:fit exp3} discuss the fit results for two relevant alternatives in the description of the nuclear modulus: either exponential functions with exponents linear in $t$ (called ``purely exponential'') or exponential functions with higher-degree polynomials of $t$ in the exponent (called ``non-exponential'').
 
@@ -16,7 +16,7 @@ Section~\ref{sec:cni framework} outlines the theoretical concepts needed to desc
 The amplitude describing elastic scattering of protons may be expected to receive three contributions, each corresponding to one of the following sets of Feynman diagrams.
 \begin{itemize}
 \item Containing QED elements only. This amplitude can be obtained by perturbative calculations, see Section~\ref{sec:cni coulomb}.
-\item Containing QCD elements only. This amplitude is not directly calculable from the QCD lagrangian, Sections~\ref{sec:cni nuclear modulus} and \ref{sec:cni nuclear phase} will propose several phenomenologically motived parame\-trisations.
+\item Containing QCD elements only. This amplitude is not directly calculable from the QCD lagrangian,\Break Sections~\ref{sec:cni nuclear modulus} and \ref{sec:cni nuclear phase} will propose several phenomenologically motived parame\-trisations.
 \item Containing both QED and QCD elements. This contribution can neither be directly calculated from the Lagrangians, nor can \textit{ad hoc} parametrisations be used -- this amplitude is correlated with the previous two. Section~\ref{sec:cni interference} will introduce several interference formulae attempting to calculate the corresponding effects.
 \end{itemize}
 
@@ -24,7 +24,7 @@ The amplitude describing elastic scattering of protons may be expected to receiv
 \subsubsection{Coulomb Amplitude}
 \label{sec:cni coulomb}
 %
-The Coulomb amplitude can be calculated from QED (e.g.~\cite{block96}), using empirical electric ${\cal F}_{\rm E}$ and magnetic ${\cal F}_{\rm M}$ form factors of the proton. It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$:
+The Coulomb amplitude can be calculated from QED\Break (e.g.~\cite{block96}), using empirical electric ${\cal F}_{\rm E}$ and magnetic ${\cal F}_{\rm M}$ form factors of the proton. It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$:
 \begin{equation}
 \label{eq:coul cs}
 	{\d\sigma^{\rm C}\over \d t} = {4\pi\alpha^2\over t^2}\,{\cal F}^4\ ,\ 
@@ -48,7 +48,7 @@ where $N_b$ is the number of free parameters in the exponent. Consistently with 
 Please note that Eq.~(15) in \cite{8tev-90m} contains a misprint: the exponent should have read $\sum\limits_{i=1}^{N_b} b_i\, |t|^i$.
 }, the parameter $b_1$ gives the forward diffractive slope and $a$ the intercept of the differential cross-section at $t=0$. This parametrisation is also compatible with a number of theoretical models (see e.g.~\cite{elegent}).
 
-Since the calculation of CNI may, in principle, involve integrations (e.g.~Eq.~(\ref{eq:int kl})), it is necessary to extend the nuclear amplitude meaningfully to $|t| > 0.2\un{GeV^2}$. Therefore the parametrisation Eq.~(\ref{eq:nuc mod}) is only used for $|t| < 0.2\un{GeV^2}$ while at $|t| > 0.5\un{GeV^2}$ the amplitude is fixed to follow a preliminary cross-section derived from the same data set as in \cite{8tev-90m} which features a dip-bump structure similar to the one observed at $\sqrt{s} = 7\un{TeV}$ \cite{epl95}. In order to avoid numerical problems, the intermediate region $0.2 < |t| < 0.5\un{GeV^2}$ is modelled with a continuous and smooth interpolation between the low and high-$|t|$ parts. It will be shown that altering the extended part of the nuclear amplitude ($|t| > 0.2\un{GeV^2}$) within reasonable limits has negligible impact on the results presented later on.
+Since the calculation of CNI may, in principle, involve integrations (e.g.~Eq.~(\ref{eq:int kl})), it is necessary to extend the nuclear amplitude meaningfully to $|t| > 0.2\un{GeV^2}$. Therefore the parametrisation Eq.~(\ref{eq:nuc mod}) is only used for $|t| < 0.2\un{GeV^2}$ while at $|t| > 0.5\un{GeV^2}$ the amplitude is fixed to follow a preliminary cross-section derived from the same data set as in \cite{8tev-90m} which features a dip-bump structure similar to the one observed at $\sqrt{s} = 7\un{TeV}$ \cite{epl95}. In order to avoid numerical problems, the intermediate region $0.2 < |t| < 0.5\un{GeV^2}$ is modelled with a continuous and smooth interpolation between the low and high-$|t|$ parts. It will be shown that altering the extended part of the nuclear amplitude\Break ($|t| > 0.2\un{GeV^2}$) within reasonable limits has negligible impact on the results presented later on.
 
 
 
@@ -119,7 +119,7 @@ can have a rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and a
 \end{figure*}
 
 
-Figure~\ref{fig:phase illustration} shows on the same plot a comparison of phase predictions by several models to typical examples of parametrisations proposed above.
+Figure~\ref{fig:phase illustration} shows on the same plot a comparison of phase predictions by several models to typical examples of\Break parametrisations proposed above.
 
 It should be noted that the nuclear phase has a strong influence on the amplitude behaviour in the space of impact parameter $b$ (for a detailed discussion see e.g.~Section~3 in~\cite{klk02}). A particularly decisive feature is the rate of phase variation at low $|t|$. Looking at Figure~\ref{fig:phase illustration} one can see that the constant, standard and Bailly phases are essentially flat at low $|t|$, thus leading to qualitatively similar pictures in the impact parameter space: elastic collisions being more central (preferring lower values of $b$) than the inelastic ones. Conversely, the peripheral phase parametrisation can yield a description with the opposite hierarchy, which is argued to be more natural by some authors (e.g. Section~4 in~\cite{kl96}). An impact-parameter study of the presented data will be given at end of Section~\ref{sec:fit exp3}.
 
@@ -193,7 +193,7 @@ Illustration of the effects due to the Coulomb interaction, using the KL formula
 \subsection{Analysis Procedure}
 \label{sec:cni anal proc}
 
-In addition to using the data from Table~\ref{tab:data}, one might consider including the $\beta^* = 90\un{m}$ data \cite{8tev-90m} which benefit from much smaller uncertainties. However, due to the limited reach, $|t| \gtrsim 0.03\un{GeV^2}$, they have essentially no sensitivity to the $\rho$ parameter, cf.~Fig.~\ref{fig:cni effect}. Furthermore, due to possible systematic tensions between the data sets, the inclusion of the $\beta^* = 90\un{m}$ data may have a deteriorating impact on the $\rho$ determination. Therefore, the value of $\rho$ was determined from the $\beta^* = 1000\un{m}$ data only. For other parameters to which both data sets have non-negligible sensitivity (e.g.~$b_i$ in Eq.~(\ref{eq:nuc mod})), both data sets should give compatible results. This was verified for all the fits that will be presented later on. Since the $\beta^* = 90\un{m}$ data yield much lower uncertainties, both data sets have been used for determining all parameters except $\rho$. In practice, a series of two fits was performed:
+In addition to using the data from Table~\ref{tab:data}, one might consider including the $\beta^* = 90\un{m}$ data \cite{8tev-90m} which benefit from much smaller uncertainties. However, due to the limited\Break reach, $|t| \gtrsim 0.03\un{GeV^2}$, they have essentially no sensitivity to the $\rho$ parameter, cf.~Fig.~\ref{fig:cni effect}. Furthermore, due to possible systematic tensions between the data sets, the inclusion of the $\beta^* = 90\un{m}$ data may have a deteriorating impact on the $\rho$ determination. Therefore, the value of $\rho$ was determined from the $\beta^* = 1000\un{m}$ data only. For other parameters to which both data sets have non-negligible sensitivity (e.g.~$b_i$ in Eq.~(\ref{eq:nuc mod})), both data sets should give compatible results. This was verified for all the fits that will be presented later on. Since the $\beta^* = 90\un{m}$ data yield much lower uncertainties, both data sets have been used for determining all parameters except $\rho$. In practice, a series of two fits was performed:
 \begin{enumerate}[leftmargin=2cm]
 \item[step 1:] fit of $\beta^* = 1000\un{m}$ data with $\rho$ free,
 \item[step 2:] fit of $\beta^* = 1000$ and $90\un{m}$ data with $\rho$ fixed from the preceding step.
@@ -211,13 +211,13 @@ The standard least-squares method was used for all the fits. In particular, mini
 where $\Delta$ is a vector of differences between the differential cross-section data and a fit function $\d\sigma^{C+N}/\d t$ evaluated at the representative point $t^{\rm rep}$ of each bin~\cite{lafferty94}. The minimisation is repeated several times, and the representative points are updated between iterations. The CNI effects are calculated using the computer code from~\cite{elegent}. The covariance matrix $\mat V$ has two components. The diagonal of $\mat V_{\rm stat}$ contains the statistical uncertainty squared from Table~\ref{tab:data} and from the Table~3 in \cite{8tev-90m}. $\mat V_{\rm syst}$ includes all systematic uncertainty contributions except the normalisation, see Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}. For improved fit stability, the normalisation uncertainty is not included in the $\chi^2$ definition. Instead, the uncertainty is propagated for each fit parameter. For this purpose, the fit is repeated with $-1\un{\sigma}$, $0\un{\sigma}$ and $+1\un{\sigma}$ biases independently in: global normalisation ($1\un{\sigma} = 4.2\un{\%}$), $90\un{m}$ data normalisation ($0.08\un{\%}$) and $1000\un{m}$ data normalisation ($0.25\un{\%}$). This gives a sample of 27 fit results, from which one can estimate the propagated normalisation uncertainty of a parameter as $(\hbox{max} - \hbox{min})/2$, where ``max'' (``min'') is the greatest (smallest) value in the sample. This normalisation uncertainty is, at the end, added quadratically to the uncertainty reported by the fit with no bias.
 
 
-The fits have shown low sensitivity to several of the choices presented above, summarised in the following list. 
+The fits have shown low sensitivity to several of the\Break choices presented above, summarised in the following list. 
 \begin{itemize}
 \item Choice of the form factor in Eq.~(\ref{eq:coul cs}). The options considered in \cite{elegent} have been tested, none of them giving any significant difference with respect to the default choice \cite{puckett10}.
 \item Extension of the modulus of the nuclear amplitude to the unobserved $|t|$ region, see the last paragraph in Section~\ref{sec:cni nuclear modulus}. No effect was observed when the high-$|t|$ part was altered (both shape and normalisation) nor when the size of the transition region was changed.
 \item Use of the Cahn or KL formula. Only the latter will be used in what follows to represent both of them.
 \item The two variants of the KL formula, Eqs.~(\ref{eq:int kl}) and (\ref{eq:int kl exp}). The latter will be used below.
-\item Fits with constant, standard and Bailly phase are practically indistinguishable. This can be expected from Fig.~\ref{fig:cni effect} showing that the corresponding CNI effects are very similar. Therefore, in the remainder of this article, these phases will be treated as a single family represented by the constant phase.
+\item Fits with constant, standard and Bailly phase are practically indistinguishable. This can be expected from\Break Fig.~\ref{fig:cni effect} showing that the corresponding CNI effects are very similar. Therefore, in the remainder of this article, these phases will be treated as a single family represented by the constant phase.
 \end{itemize}
 
 
@@ -228,7 +228,7 @@ One of the goals of this study is to probe the origin of the differential cross-
 \end{itemize}
 For each of these nuclear modulus cases, the following two phase parametrisations were considered:
 \begin{itemize}\setlength\itemsep{0pt}
-\item constant phase, Eq.~(\ref{eq:nuc phase con}), as a representative of the central-phases family,
+\item constant phase, Eq.~(\ref{eq:nuc phase con}), as a representative of the\Break central-phases family,
 \item peripheral phase, Eq.~(\ref{eq:nuc phase per}) with parameters fixed to the values in Eq.~(\ref{eq:nuc phase per val}) to represent peripheral behaviour in the impact parameter space.
 \end{itemize}
 
@@ -244,7 +244,7 @@ Note that unlike all previous total cross-section determinations at LHC, in this
 \subsection{Fits with Purely Exponential Nuclear Modulus}
 \label{sec:fit exp1}
 
-The goal of this section is to test whether the data are compatible with a purely exponential nuclear modulus, i.e.~$N_b=1$ in Eq.~(\ref{eq:nuc mod}). In other words, the non-exponentiality is forced to originate from the Coulomb-induced effects. The fit results obtained with the KL and (where applicable) SWY formulae are summarised in Table~\ref{tab:fit exp1} and graphically shown in Fig.~\ref{fig:fit exp1}.
+The goal of this section is to test whether the data are compatible with a purely exponential nuclear modulus, i.e.~$N_b=1$ in Eq.~(\ref{eq:nuc mod}). In other words, the non-exponentiality is\Break forced to originate from the Coulomb-induced effects. The fit results obtained with the KL and (where applicable) SWY formulae are summarised in Table~\ref{tab:fit exp1} and graphically shown in Fig.~\ref{fig:fit exp1}.
 
 \begin{table*}
 \caption{Fit results with $N_b=1$. Each column corresponds to a fit with different interference formula and/or nuclear phase.}
@@ -274,7 +274,7 @@ Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentiall
 
 Although the quality of the fit with the peripheral phase is good, this option seems disfavoured from different perspectives.
 \begin{itemize}
-\item There are several theoretical reasons for the nuclear component not to be purely exponential, e.g.~\cite{kmr00-multiPom,kmr12-opacity,kmr15-slope,fagundes15}. Indeed, most elastic scattering models predict a non-exponential nuclear modulus, see e.g.~\cite{elegent} and references therein.
+\item There are several theoretical reasons for the nuclear component not to be purely exponential, e.g.~\cite{kmr00-multiPom,kmr12-opacity,kmr15-slope,fagundes15}. Indeed, most elastic scattering models predict\Break a non-exponential nuclear modulus, see e.g.~\cite{elegent} and references therein.
 \item The value of $\rho$ obtained in this fit may be regarded as an outlier with respect to a consistent pattern of other fits from this article and extrapolations from lower energies: e.g.~\cite{fagundes12,block12,compete} and most models in \cite{elegent}.
 \end{itemize}
 Let us also recall that the good quality of this fit is possible due to the more complex KL formula where the CNI effects go beyond a simple additional phase in the traditional SWY concept.
@@ -346,7 +346,7 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 The total cross-section results from the two fits in Table~\ref{tab:fit exp3} are well consistent with each other and also with previous measurements \cite{8tev-90m,prl111}. The slightly higher values with respect to previous analyses neglecting the Coulomb interaction are expected as long as $\rho > 0$. This gives negative interference at low $|t|$ and when separated leads to an increase of nuclear cross-section intercept $a$ and thus also total cross-section via Eq.~(\ref{eq:si tot}).
 
 
-It is interesting to study the fit behaviour in the impact-parameter space. The scattering amplitude in this representation (sometimes called profile function), ${\cal P}(b)$, can be obtained from the nuclear amplitude by means of Fourier-Bessel transformation (see e.g.~\cite{klk02}):
+It is interesting to study the fit behaviour in the impact-parameter space. The scattering amplitude in this representation (sometimes called profile function), ${\cal P}(b)$, can be obtained from the nuclear amplitude by means of\Break Fourier-Bessel transformation (see e.g.~\cite{klk02}):
 \begin{equation}
 \label{eq:prof fun}
 	\begin{aligned}
