--- a/2013/1km paper/elastic_1km_epjc.tex
+++ b/2013/1km paper/elastic_1km_epjc.tex
@@ -34,6 +34,8 @@
 \def\Name#1{#1, }
 \def\Review#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
 
+\def\Break{\break}
+
 %-----------------------------------------------------------------------------
 
 \journalname{Eur. Phys. J. C}
