--- a/2013/1km paper/abstract.tex
+++ b/2013/1km paper/abstract.tex
@@ -1,7 +1,8 @@
 The TOTEM experiment at the CERN LHC has measured elastic proton-proton 
 scattering at the centre-of-mass energy 
-$\sqrt{s}=8\,$TeV and four-momentum transfers squared, $|t|$, from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$.
-Near the lower end of the $t$-interval the differential cross-section is 
+$\sqrt{s}=8\,$TeV and four-momentum transfers\Break
+squared, $|t|$, from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$.
+Near the\Break lower end of the $t$-interval the differential cross-section is 
 sensitive to the 
 interference between the hadronic and the electromagnetic scattering amplitudes.
 This article presents the elastic cross-section measurement and the constraints it 
