--- a/2013/1km paper/acknowledgements.tex
+++ b/2013/1km paper/acknowledgements.tex
@@ -1,4 +1,4 @@
-This work was supported by the institutions listed on the front page and also by the 
+This work was supported by the institutions\Break listed on the front page and also by the 
 Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), 
 the Academy of Finland, the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund), 
 the OTKA grant NK 101438 (Hungary). Individuals have received support from Nylands nation vid Helsingfors universitet (Finland) 
