--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -32,9 +32,9 @@ units: ``near'' (215\,m from the IP) and ``far'' (220\,m).
 A unit consists of 3 RPs, one
 approaching the outgoing beam from the top, one from the bottom, and one 
 horizontally.
-Each RP houses a stack of 10 silicon
-strip detectors designed with the specific objective of
-reducing the insensitive area at the edge facing the beam
+Each RP houses a stack of 5 ``U'' and 5 ``V'' silicon strip detectors, where ``U'' and ``V''
+refer to two mutually perpendicular strip orientations. The sensors were designed with the
+specific objective of reducing the insensitive area at the edge facing the beam
 to only a few tens of micrometers. Due to the 5\,m long lever arm 
 between the near and the far RP units 
 the local track angles can be reconstructed
