--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -297,7 +297,25 @@ The first term in the parentheses sums the contributions from the four RPs of a 
 \subsubsection{Unfolding of Resolution Effects}
 \label{sec:unfolding}
 
-Due to the very small beam divergence, the correction for resolution effects can be safely determined by the following iterative procedure. The differential cross-section data are fitted by a smooth curve which serves as an input to a numerical-integration calculation of the smeared\Break $t$-distribution (using the resolution parameters determined in Section~\ref{sec:resolution}). The ratio between the smeared and the non-smeared $t$-distributions gives a set of per-bin correction factors. Applying them to the yet uncorrected differential cross-section yields a better estimate of the true $t$-distribution, which can be used as input to the next iteration. The iteration stops when the difference between the input and output $t$-distributions becomes negligible, which is typically achieved after the second iteration. The final correction is negligible (${\cal U} \approx 1$) for all bins except at very low $|t|$ where the rapid cross-section growth occurs, see Figure~\ref{fig:unfolding}.
+Due to the very small beam divergence, the correction for resolution effects can be safely determined by the following iterative procedure.
+\begin{itemize}
+\item[1.] The differential cross-section data are fitted by a smooth curve.
+\item[2.] The fit is used in a numerical-integration calculation of the smeared $t$-distribution (using the resolution parameters determined in Section~\ref{sec:resolution}). The ratio between the smeared and the non-smeared $t$-distributions gives a set of per-bin correction factors.
+\item[3.] The corrections are applied to the observed (yet uncorrected) differential cross-section yielding a better estimate of the true $t$-distribution.
+\item[4.] The corrected differential cross-section is fed back to step 1.
+\end{itemize}
+As the estimate of the true $t$-distribution improves, the difference between the correction factors obtained in two successive iterations decreases. When it becomes negligible, the iteration stops. This is typically achieved after the second iteration. The final correction is negligible (${\cal U} \approx 1$) for all bins except at very low $|t|$ where the rapid cross-section growth occurs, see Figure~\ref{fig:unfolding}.
+
+\iffalse
+The differential cross-section data are fitted by a smooth curve
+
+which serves as an input to a numerical-integration calculation of the smeared\Break $t$-distribution (using the resolution parameters determined in Section~\ref{sec:resolution}). The ratio between the smeared and the non-smeared $t$-distributions gives a set of per-bin correction factors.
+
+Applying them to the yet uncorrected differential cross-section yields a better estimate of the true $t$-distribution, which can be used as input to the next iteration.
+
+The iteration stops when the difference between the input and output $t$-distributions becomes negligible, which is typically achieved after the second iteration. The final correction is negligible (${\cal U} \approx 1$) for all bins except at very low $|t|$ where the rapid cross-section growth occurs, see Figure~\ref{fig:unfolding}.
+\fi
+
 
 \begin{figure}
 \begin{center}
