Expanded section on normalisation.
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@12668 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -334,9 +334,7 @@ For the uncertainty estimate, the uncertainties of the $\theta_x^*$ and $\theta_
 \subsubsection{Normalisation}
 \label{sec:normalisation}
 
-The normalisation ${\cal N}$ is determined by requiring the same cross-section integral between $|t| = 0.014$ and $0.203\un{GeV^2}$ as for dataset 1 published in \cite{prl111}, where a luminosity independent calibration was applied. The leading uncertainty of the scaling factor $4.2\un{\%}$ comes from the luminosity independent method.
-% transfer negligible ($0.5\un{\%}$).
-% stat: 0.3%, syst: 0.3% (DS2 at 90m), 0.3% (1km)
+The normalisation ${\cal N}$ is determined by requiring the same cross-section integral between $|t| = 0.014$ and $0.203\un{GeV^2}$ as for dataset 1 published in \cite{prl111}. This publication describes a measurement of elastic and inelastic rates at the same collision energy of $\sqrt s = 8\un{TeV}$. These rates can be combined using the optical theorem in order to resolve the value of the luminosity which consequently allows for normalisation of the differential cross-section. The leading uncertainty of ${\cal N}$, $4.2\un{\%}$, comes from the rate uncertainties in \cite{prl111}.
 
 
 %-------------------------
